--- a/veoc/templates/veoc/weekly_shift.html
+++ b/veoc/templates/veoc/weekly_shift.html
@@ -16,7 +16,8 @@
         <div class="row">
           <div class="col-sm-12 col-md-12">
             <div class="col-md-12" style="padding-bottom:10px">
-              <button type="button" id="openBtn" class="btn btn-info btn-sm pull-left" data-toggle="modal" data-target="#add_contact"> <i class="fa fa-plus" aria-hidden="true"></i> Book Callendar Event</button>
+              <button type="button" id="openBtn" class="btn btn-info btn-sm pull-left" data-toggle="modal"
+              data-target="#add_contact"> <i class="fa fa-plus" aria-hidden="true"></i> Book Callendar Event</button>
             </div>
 
           </div><!-- /.col -->
@@ -27,7 +28,7 @@
                 <div class="panel-heading">EOC CALLENDAR EVENTS
                 </div>
                 <div class="panel-body">
-                  <div id="weekly_shift" style="height: 100%; width: 100%;">
+                  <div id="week_shift" style="height: 100%; width: 100%;">
                   </div>
                 </div><!-- panel-body -->
             </div><!-- /div panel-default -->
@@ -71,6 +72,10 @@
                     <input class="form-control" type="date" size="45" name="end_date">
                 </div>
                 <div class="form-group">
+                    <label for="time"><b>Time:</b></label>
+                    <input class="form-control" type="time" size="45" name="time">
+                </div>
+                <div class="form-group">
                     <input type="submit" value="Save Event" class=" btn btn-primary">
                 </div>
               </div>
@@ -88,50 +93,52 @@
 {% block script %}
   <script>
     $(document).ready(function () {
+      // console.log("{{ events }}");
+      // {% for event in events %}
+      //   console.log("{{ event.event_name }}");
+      // {% endfor %}
 
-          $('#weekly_shift').fullCalendar({
-              // enable theme
-              theme: true,
-              // emphasizes business hours
-              businessHours: true,
-              // event dragging & resizing
-              editable: true,
-              displayEventTime: false,
-              // header
-              header: {
-                  left: 'prev,next today',
-                  center: 'title',
-                  right: 'month,agendaWeek,agendaDay'
-              },
-              selectable: true,
-              editable: false,
-              events: [
-                  {% for event in events %}
-                      {
-                          title: '{{ event.name }}',
-                          description: '{{ event.description }}',
-                          time: '{{ event.time }}',
-                          start: '{{ event.start_date }}',
-                          end: '{{ event.end_date}}',
+        $('#week_shift').fullCalendar({
+            // enable theme
+            theme: true,
+            // emphasizes business hours
+            businessHours: true,
+            // event dragging & resizing
+            editable: true,
+            displayEventTime: false,
+            // header
+            header: {
+                left: 'prev,next today',
+                center: 'title',
+                right: 'month,agendaWeek,agendaDay'
+            },
+            selectable: true,
+            editable: false,
+            events: [
+                {% for event in events %}
+                    {
+                        title: '{{ event.event_name }}',
+                        description: '{{ event.event_description }}',
+                        time: '{{ event.time }}',
+                        start: '{{ event.start_date }}',
+                        end: '{{ event.end_date}}',
+                    },
+                {% endfor %}
+                {
+                    title: 'Jane',
+                    start: '2020-05-05',
+                    end: '2020-05-12'
+                }
+            ],
+            eventClick: function (calEvent) {
 
-                      },
-                  {% endfor %}
-                  {
-                      title: 'Jane',
-                      start: '2001-05-05',
-                      end: '2001-05-12'
+                alert('Event: ' + calEvent.title + '\n Desc: ' + calEvent.description);
 
-                  }
-              ],
-              eventClick: function (calEvent) {
+                // change the border color just for fun
+                $(this).css('border-color', 'red');
 
-                  alert('Event: ' + calEvent.title + '\n Desc: ' + calEvent.description + '\n Time: ' + calEvent.time);
-
-                  // change the border color just for fun
-                  $(this).css('border-color', 'red');
-
-              }
-          });
+            }
+        });
       });
   </script>
 {% endblock %}
