--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -171,10 +171,10 @@
                     <!-- <span class="fa-stack fa-lg pull-left"><i
                           class="fa fa-child fa-stack-1x "></i></span>-->
                           Reportable Events</a></li>
-                  <li><a href="/upload_csv">
+                  <!-- <li><a href="/upload_csv"> -->
                     <!-- <span class="fa-stack fa-lg pull-left"><i
                           class="fa fa-file-text-o fa-stack-1x "></i></span> -->
-                          Upload MOH 503</a></li>
+                          <!-- Upload MOH 503</a></li> -->
                   <!-- <li><a href="/generate_pdf"> -->
                     <!-- <span class="fa-stack fa-lg pull-left"><i
                           class="fa fa-file-text-o fa-stack-1x "></i></span> -->
@@ -291,7 +291,7 @@
                 class="fa fa-leanpub fa-stack-1x "></i></span>SYSTEM FEEDBACK</a>
                 <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                     <li>
-                        <a href="/general_feedback">General Feedback Form</a>
+                        <a href="/module_general_feedback">General Feedback Form</a>
                     </li>
                     <li>
                         <a href="/module_feedback">Module Feedback Form</a>
